# Ptivate-Agent

./: .gitignore  KIMI_INTEGRATION_REPORT.md  README.md  agent-link-server.js  agent-link.html  companion-layout-preview.html  debug-schedule-delete-failure.md  debug_launch.bat  dev-urls.json  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  start-with-agent-world.ps1  test-ws-gomoku.mjs
.dbg/: schedule-delete-failure.env
agent-sphere-avatar/: .env.example  PORTABLE.md  README.md  overlay.html  package-lock.json  package.json  vite.config.ts  wrangler.jsonc
agent-world/: .gitignore  agent-world-chat-tools.ts  doudizhu-chat-tools.ts  index.ts  protocol-world.ts
data/: daily-digests.json
desktop-visual/: .gitignore  install-deps.ps1  pyproject.toml  requirements.txt  start-bridge.ps1
desktop-visual/desktop_visual/: __init__.py  __main__.py  actions.py  bridge_ws_client.py  stdio_worker.py  visual_loop.py
desktop-visual/desktop_visual/runtime/: __init__.py  capture.py  mouse_controller.py
desktop-visual/desktop_visual/vlm/: __init__.py  base.py  env_config.py  openai_compatible.py  stub.py
desktop-visual/desktop_visual_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: dev-all.mjs  dev-server-watch.mjs  free-dev-ports.ps1  install-openclaw-wechat-bridge.mjs  port-in-use.mjs  spawn-openclaw-gateway.mjs
server/: .env.example  .env.local.example  .gitignore  Dockerfile  all_ts_files.txt  enable-master-agent-delegate.ps1  enable-multi-agent.ps1  package.json  test-imports.cjs  (+2 more)
(+518 files in other folders)
