[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "desktop-visual-agent"
version = "0.1.0"
description = "Vision-language desktop control with pyautogui and pynput"
requires-python = ">=3.11"
dependencies = [
  "pyautogui>=0.9.54",
  "pynput>=1.7.6",
  "Pillow>=10.0.0",
  "httpx>=0.27.0",
  "websockets>=12.0",
]

[project.scripts]
desktop-visual-agent = "desktop_visual_agent.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["desktop_visual_agent*"]
